[gd_scene load_steps=10 format=3 uid="uid://h88i2ontyo3t"]

[ext_resource type="Script" path="res://Scripts/spawnpoint.gd" id="1_6yitp"]
[ext_resource type="Texture2D" uid="uid://b6fhrvhitnit1" path="res://Sprites/spawn.png" id="1_7w8ua"]
[ext_resource type="PackedScene" uid="uid://cgrejqsw3fp62" path="res://Escenas/menu_spawnpoint.tscn" id="3_rgy4x"]
[ext_resource type="AudioStream" uid="uid://7msf11a5mtfo" path="res://Undertale-Sound-Effect-Save-Point.wav" id="4_fjxmu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dvxug"]
atlas = ExtResource("1_7w8ua")
region = Rect2(2, 2, 20, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_lktgn"]
atlas = ExtResource("1_7w8ua")
region = Rect2(24, 2, 20, 19)

[sub_resource type="SpriteFrames" id="SpriteFrames_x1g2e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvxug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lktgn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cgh6d"]
size = Vector2(23, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i1sg2"]
size = Vector2(18, 7)

[node name="spawnpoint" type="Area2D"]
z_index = -1
collision_mask = 2
script = ExtResource("1_6yitp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(10, -10)
sprite_frames = SubResource("SpriteFrames_x1g2e")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(10.5, 1)
shape = SubResource("RectangleShape2D_cgh6d")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
light_mask = 2
visibility_layer = 2
position = Vector2(10, -13.5)
shape = SubResource("RectangleShape2D_i1sg2")

[node name="MenuSpawnpoint" parent="." instance=ExtResource("3_rgy4x")]
offset = Vector2(-400, -100)
transform = Transform2D(1, 0, 0, 1, -400, -100)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_fjxmu")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
